--- a/packages/SystemUI/res/values/bootleg_dimens.xml
+++ b/packages/SystemUI/res/values/bootleg_dimens.xml
@@ -37,10 +37,10 @@
     <!-- Weather condition icon  -->
     <dimen name="weather_icon_size">24dp</dimen>
 
-        <!-- Old style mobile data indicators -->
-        <dimen name="status_bar_mobile_signal_with_type_width">22dp</dimen>
-        <dimen name="status_bar_mobile_signal_width">16dp</dimen>
-        <dimen name="status_bar_mobile_type_height">10dp</dimen>
+    <!-- Old style mobile data indicators -->
+    <dimen name="status_bar_mobile_signal_with_type_width">22dp</dimen>
+    <dimen name="status_bar_mobile_signal_width">16dp</dimen>
+    <dimen name="status_bar_mobile_type_height">10dp</dimen>
 
    <!-- Tri-state UI -->
     <dimen name="tri_state_down_dialog_padding_edge">8.0dip</dimen>
@@ -87,8 +87,10 @@
     <!-- Screenrecord UI -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
 
-
     <!-- Custom Carrier Label -->
     <dimen name="status_bar_carrier_height">14dp</dimen>
+
+    <!-- FOD Animation Size -->
+    <dimen name="fod_animation_size">280dp</dimen>
 
 </resources>
