FODCicleView: Allow to overlay default pressed icon state [1/2]
All devices have a different color. Let them choose

Change-Id: I689973adf175e09d3491e5734fe1d00cd28428dd
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/core/res/res/values/bootleg_config.xml
+++ b/core/res/res/values/bootleg_config.xml
@@ -160,4 +160,6 @@
     <!-- Default state for LiveDisplay -->
     <bool name="config_liveDisplayAvailable">false</bool>
 
+    <!-- Default fod pressed icon -->
+    <integer name="config_pressed_fod_icon">4</integer>
 </resources>
